--- a/src/Pages/Welcome.module.css
+++ b/src/Pages/Welcome.module.css
@@ -4,7 +4,7 @@
     align-items: center;
     flex-direction: column;
     position: relative;
-    height: 100dvh;
+    /* height: 100dvh; */
 }
 
 .top{
