--- a/src/Pages/Subscription.module.css
+++ b/src/Pages/Subscription.module.css
@@ -1,8 +1,10 @@
 
 .main{
-    padding: 2rem;
+    /* padding: 2rem; */
     /* padding-top: 0; */
-    /* width: 100%; */
+    width: 100%;
+    position: absolute;
+    top: 3rem;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -171,8 +173,9 @@
  
  
  .footer_container{
-     padding: 2rem;
-     /* position: fixed; */
+     /* padding: 2rem; */
+     position: absolute;
+     bottom: 3rem;
      bottom:1.5rem;
      display: flex;
      justify-content: center;
