--- a/src/Pages/Welcome.module.css
+++ b/src/Pages/Welcome.module.css
@@ -3,8 +3,8 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    position: relative;
-    /* height: 100dvh; */
+    /* position: absolute; */
+    height: 100vh;
 }
 
 .top{
