--- a/src/Pages/Login.module.css
+++ b/src/Pages/Login.module.css
@@ -174,10 +174,11 @@
  
  
  .footer_container{
-     /* padding: 2rem; */
-     position: absolute;
-     left: 0;
-     bottom:20px;
+     padding: 2rem;
+     /* position: absolute; */
+     /* left: 0; */
+     /* bottom:20px; */
+     margin-top: 8rem;
      display: flex;
      justify-content: center;
      align-items: center;
