--- a/src/Pages/Subscription.module.css
+++ b/src/Pages/Subscription.module.css
@@ -173,8 +173,8 @@
  
  
  .footer_container{
-     /* padding: 2rem; */
-     position: absolute;
+     padding: 2rem;
+     /* position: absolute; */
      bottom: 3rem;
      bottom:1.5rem;
      display: flex;
