--- a/src/Components/Layout.module.css
+++ b/src/Components/Layout.module.css
@@ -1,6 +1,7 @@
 .container{
     width: 100%;
     /* min-height: 100dvh; */
+    /* padding: 2rem; */
     display: flex;
     justify-content: center;
     align-items: center;
