--- a/src/Pages/Login.module.css
+++ b/src/Pages/Login.module.css
@@ -1,7 +1,7 @@
 
 .main{
     /* padding: 2rem; */
-    position: absolute;
+    /* position: absolute; */
     top: 3rem;
     width: 100%;
     display: flex;
