--- a/src/Pages/Subscription.module.css
+++ b/src/Pages/Subscription.module.css
@@ -1,10 +1,9 @@
 
 .main{
     /* padding: 2rem; */
-    /* padding-top: 0; */
-    width: 100%;
-    position: absolute;
+    /* position: absolute; */
     top: 3rem;
+    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
