--- a/src/Pages/Login.module.css
+++ b/src/Pages/Login.module.css
@@ -163,7 +163,7 @@
  
  
  .footer_container{
-     padding: 2rem;
+     /* padding: 2rem; */
      /* position: absolute; */
      /* left: 0; */
      /* bottom:20px; */
